--- a/manifests/deploy-microservice.yml
+++ b/manifests/deploy-microservice.yml
@@ -2,26 +2,26 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
     labels:
-        app: mild-temper-microservice
+        app: hard-wall-microservice
         stack: frontend
         source: demo
-    name: mild-temper-microservice
+    name: hard-wall-microservice
     namespace: microservices
 spec:
     replicas: 5
     selector:
         matchLabels:
-            run: mild-temper-microservice
+            run: hard-wall-microservice
     template:
         metadata:
             labels:
-                app: mild-temper-microservice
-                run: mild-temper-microservice
+                app: hard-wall-microservice
+                run: hard-wall-microservice
                 source: demo
         spec:
             containers:
-                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/mild-temper-microservice
-                    name: mild-temper-microservice
+                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/hard-wall-microservice
+                    name: hard-wall-microservice
                     ports:
                         -   name: web
                             containerPort: 8080
@@ -31,14 +31,14 @@ kind: Service
 apiVersion: v1
 metadata:
     labels:
-        app: mild-temper-microservice-service
+        app: hard-wall-microservice-service
         stack: frontend
-    name: mild-temper-microservice-service
+    name: hard-wall-microservice-service
     namespace: microservices
 spec:
     selector:
         source: demo
-        app: mild-temper-microservice
+        app: hard-wall-microservice
     ports:
         -   name: web
             protocol: TCP
@@ -54,15 +54,15 @@ metadata:
         stack: frontend
     annotations:
         nginx.ingress.kubernetes.io/rewrite-target: /$2
-    name: mild-temper-ingress
+    name: hard-wall-ingress
     namespace: microservices
 spec:
     rules:
         -   http:
                 paths:
-                    -   path: /mild-temper(/|$)(.*)
+                    -   path: /hard-wall(/|$)(.*)
                         backend:
-                            serviceName: mild-temper-microservice-service
+                            serviceName: hard-wall-microservice-service
                             servicePort: 30201
 
 
